testdata/simulate/deny-ingress-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: unrelated
      ports:
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
